<resources>
    <string name="app_name">La Concepción - Restaurante</string>

    <string name="inicio_frag_tv_que_es_resp">Este restaurante conocido como “LA CONCHA”, ocupa un enclave privilegiado bajo los soportales de la Plaza Mayor.
\n
\nEn su animada terraza, junto a la Catedral, se puede desayunar o tomar el aperitivo disfrutando del sol, incluso en los meses de invierno, y en las noches de verano es cita obligada para tomar una copa o un cocktail.
\n
\nAquí se dan cita artistas, bohemios, escritores, actores y gente de paso que gusta de respirar historia y tranquilidad en compañía de un buen café y un libro… o un buen amigo.</string>
    <string name="inicio_frag_tv_por_que">¿Por qué asistir?</string>
    <string name="inicio_frag_tv_por_que_resp">En nuestra cafetería se puede disfrutar de un tranquilo café o un animado vermú.
        \n
        \nNuestra barra, siempre tiene los aperitivos más variados elaborados con productos de primera calidad.</string>
    <string name="inicio_frag_tv_info_resp">
        \u0009 &#8226; Es un evento exclusivo para estudiantes con suscripción activa en Platzi.\n
        \u0009 &#8226; (Sí esto te apasiona y no tienes una suscripción activa, adquiere ya mismo tu Plan Expert).\n
        \u0009 &#8226; Fecha: Sábado 3 de Agosto de 2019.\n
        \u0009 &#8226; Lugar: Centro Cultural Roberto Cantoral.\n
        \u0009 &#8226; Dirección: Puente Xoco s/n, Xoco, 03330 Ciudad de México, CDMX.</string>
    <string name="reserva">Reserva</string>
    <string name="description_reservation">Gracias por elegir reservar una mesa en nuestro restaurante. Elija la fecha y la hora a la que desea la reserva y rellene el formulario con sus datos. Si tiene cualquier pregunta, no dude en llamarnos al 921 46 09 30 o enviarnos un email a laconcepcion@restaurantelaconcepcion.com</string>
    <string name="reservation_one">Número de personas para reservar mesa</string>
    <string name="fecha_reserva">Fecha de la reserva</string>
    <string name="et_hint_peopleNumber">Para +20 personas contacte por vía telefónica</string>
    <string name="dd_mm_aaaa">dd/mm/AAAA</string>
    <string name="hh_min">hh:min</string>
    <string name="detalles_y_peticiones">Detalles y peticiones</string>
    <string name="peticiones">Peticiones</string>
    <string name="et_hint_reservationName">Nombre y apellidos*</string>
    <string name="et_reservation_telefono">Teléfono *</string>
    <string name="btn_reservationSend">Enviar</string>
    <string-array name="personsNumber_array">
        <item>1 persona</item>
        <item>2 personas</item>
        <item>3 personas</item>
        <item>4 personas</item>
        <item>5 personas</item>
        <item>6 personas</item>
        <item>7 personas</item>
        <item>8 personas</item>
        <item>9 personas</item>
        <item>10 personas</item>
        <item>11 personas</item>
        <item>12 personas</item>
        <item>13 personas</item>
        <item>14 personas</item>
        <item>15 personas</item>
        <item>16 personas</item>
        <item>17 personas</item>
        <item>18 personas</item>
        <item>19 personas</item>
        <item>20+ personas</item>

    </string-array>
    <string name="notification_channel_id" translatable="false">restaurant_channel</string>
    <string name="notification_channel_name" translatable="true">Restaurant</string>
    <string name="notification_title" translatable="true">Restaurante La Concepción</string>
    <string name="reservation_soon">Recuerde acudir a su reserva en una hora!</string>
    <string name="snooze">Recordar más tarde</string>
    <string name="snooze_notification">Aún queda menos para su reserva!</string>

</resources>
