<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ui.fragments.ReservationFragment"
    android:id="@+id/fragment_reservation">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:text="@string/reserva"
                android:textSize="30sp"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="15dp"
                android:paddingBottom="5dp"
                android:text="@string/description_reservation"
                 />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="@dimen/ivReservationSubtitle"
                    android:layout_weight="1">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/one"
                        android:paddingLeft="@dimen/paddingLeftReservation"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="7"
                    android:layout_gravity="center_vertical">
                    <TextView
                        android:layout_width="match_parent"

                        android:layout_height="wrap_content"
                        style="@style/tv_reservation_subtitle"
                        android:text="@string/reservation_one"
                        />
                </LinearLayout>

            </LinearLayout>

            <EditText
                android:id="@+id/et_reservationPeople"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/et_reservation"
                android:inputType="number"
                android:hint="@string/et_hint_peopleNumber"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="@dimen/ivReservationSubtitle"
                    android:layout_weight="1">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/two"
                        android:paddingStart="5dp"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="7"
                    android:layout_gravity="center_vertical">
                    <TextView
                        android:layout_width="match_parent"

                        android:layout_height="wrap_content"
                        style="@style/tv_reservation_subtitle"
                        android:text="@string/fecha_reserva"
                        android:paddingLeft="8dp"
                        />
                </LinearLayout>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4">
                    <EditText
                        android:id="@+id/et_reservationDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="date"
                        android:hint="@string/dd_mm_aaaa"
                        style="@style/et_reservation" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">
                    <ImageButton
                        android:id="@+id/ib_reservationDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_calendar"
                        android:layout_marginLeft="15dp"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:orientation="horizontal">
                    <EditText
                    android:id="@+id/et_reservationTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="time"
                    style="@style/et_reservation"
                    android:hint="@string/hh_min"/>
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent">

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">
                    <ImageButton
                        android:id="@+id/ib_reservationTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_time"
                        android:layout_marginStart="15dp"/>
                </LinearLayout>
            </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="@dimen/ivReservationSubtitle"
                android:layout_weight="1">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/three"
                    android:paddingStart="5dp"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:layout_gravity="center_vertical">
                <TextView
                    android:layout_width="match_parent"

                    android:layout_height="wrap_content"
                    style="@style/tv_reservation_subtitle"
                    android:text="@string/detalles_y_peticiones"
                    android:paddingLeft="8dp"
                    />
            </LinearLayout>
        </LinearLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/et_reservationPeticion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/et_reservation"
                    android:hint="@string/peticiones"
                    android:lines="3"
                    android:inputType="text"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/et_reservationName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/et_reservation"
                    android:hint="@string/et_hint_reservationName"
                    android:inputType="text"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/et_reservationPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/et_reservation"
                    android:inputType="phone"
                    android:hint="@string/et_reservation_telefono"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/et_reservationEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/et_reservation"
                    android:hint="Email *"
                    android:inputType="textEmailAddress"/>
            </com.google.android.material.textfield.TextInputLayout>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_reservationSend"
                android:layout_gravity="center_horizontal"
                style="@style/btn_reservation"
                />


        </LinearLayout>

    </ScrollView>




</FrameLayout>